@@ -2,4 +2,8 @@
 #define APPNAME "GTetrinet"
 #define APPVERSION VERSION
 
-void destroymain (GtkWidget *widget, gpointer data);
+extern void destroymain (GtkWidget *widget, gpointer data);
+extern gint keypress (GtkWidget *widget, GdkEventKey *key);
+extern gint keyrelease (GtkWidget *widget, GdkEventKey *key);
+
+extern GtkWidget *notebook;
