@@ -17,10 +17,21 @@
  *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 #include <gtk/gtk.h>
+#include <gnome.h>
 #include <unistd.h>
 #include <stdlib.h>
 
 #include "misc.h"
+#include "gtetrinet.h"
+
+
+/* Type to hold primary widget and it's label in the notebook page */
+typedef struct {
+    GtkWidget *parent;
+    GtkWidget *widget;
+    gint       pageNo;
+} WidgetPageData;
+
 
 /* a left aligned label */
 GtkWidget *leftlabel_new (char *str)
@@ -43,7 +54,7 @@ void leftlabel_set (GtkWidget *align, char *str)
 /* returns a random number in the range 0 to n-1 */
 int randomnum (int n)
 {
-    return (float)n*random()/(RAND_MAX+1.0);
+    return (float)n*rand()/(RAND_MAX+1.0);
 }
 
 void fdreadline (int fd, char *buf)
@@ -188,3 +199,73 @@ GtkWidget *pixmap_label (GdkPixmap *pm, GdkBitmap *mask, char *str)
     gtk_box_pack_start (GTK_BOX(box), widget, TRUE, TRUE, 0);
     return box;
 }
+
+void destroy_page_window (GtkWidget *window, gpointer data)
+{
+    WidgetPageData *pageData = (WidgetPageData *)data;
+
+    /* Put widget back into a page */
+    gtk_widget_reparent (pageData->widget, pageData->parent);
+
+    /* Select it */
+    gtk_notebook_set_page (GTK_NOTEBOOK(notebook), pageData->pageNo);
+
+    /* Free return data */
+    g_free (data);
+}
+
+void move_current_page_to_window (void)
+{
+    WidgetPageData *pageData;
+    GtkWidget *page, *child, *newWindow;
+    GList *dlist;
+    gint pageNo;
+    char *title;
+
+    /* Extract current page's widget & it's parent from the notebook */
+    pageNo = gtk_notebook_get_current_page (GTK_NOTEBOOK(notebook));
+    page   = gtk_notebook_get_nth_page (GTK_NOTEBOOK(notebook), pageNo );
+    dlist  = gtk_container_children (GTK_CONTAINER(page));
+    if (!dlist ||  !(dlist->data))
+    {
+        /* Must already be a window */
+        if (dlist)
+           g_list_free (dlist);
+        return;
+    }
+    child = (GtkWidget *)dlist->data;
+    g_list_free (dlist);
+
+    /* Create new window for widget, plus container, etc. */
+    newWindow = gtk_window_new (GTK_WINDOW_TOPLEVEL);
+    title = gtk_object_get_data(child, "title");
+    if (!title)
+        title = "GTetrinet";
+    gtk_window_set_title (GTK_WINDOW (newWindow), title);
+    gtk_container_set_border_width (GTK_CONTAINER (newWindow), 0);
+
+    /* Attach key events to window */
+    gtk_signal_connect (GTK_OBJECT(newWindow), "key_press_event",
+                        GTK_SIGNAL_FUNC(keypress), NULL);
+    gtk_signal_connect (GTK_OBJECT(newWindow), "key_release_event",
+                        GTK_SIGNAL_FUNC(keyrelease), NULL);
+    gtk_widget_set_events (newWindow, GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK);
+    gtk_window_set_policy (GTK_WINDOW(newWindow), FALSE, TRUE, FALSE);
+
+    /* Create store to point us back to page for later */
+    pageData = g_new( WidgetPageData, 1 );
+    pageData->parent = page;
+    pageData->widget = child;
+    pageData->pageNo = pageNo;
+
+    /* Move main widget to window */
+    gtk_widget_reparent (child, newWindow);
+
+    /* Pass ID of parent (to put widget back) to window's destroy */
+    gtk_signal_connect (GTK_OBJECT(newWindow), "destroy",
+                        GTK_SIGNAL_FUNC(destroy_page_window),
+                        (gpointer)(pageData));
+
+    gtk_widget_show_all( newWindow );
+}
+
